# rigid-body-dynamics

./: .gitignore  .pylintrc  Pipfile  README.md
python/: setup.py
python/rigid_body_dynamics/: rigid_body_mechanism.py  spatial_types.py
python/rigid_body_dynamics/models/: parse_sdf.py
python/rigid_body_dynamics/test/: test_spatial_types.py
rigid_body_dynamics/: spatial_types.py
rigid_body_dynamics/test/: test_spatial_types.py
src/: CMakeLists.txt  main.cpp  spatial_vectors.h  test_spatial_vectors.cpp
